--- a/public/stylesheets/admin_add_model.css
+++ b/public/stylesheets/admin_add_model.css
@@ -36,9 +36,10 @@ align-items: center;
 width: 100%;
 margin: 10px 0;
 }
-a p {
-	height: 44px;
+.but {
+  height: 44px;
   font-size: 16px;
+
 }
 
 select {
@@ -65,4 +66,16 @@ select {
 	margin-top: 30%;
 	margin-left: 40%;
 	border-radius: 6px;
+}
+
+.filter img {
+	display: none;
+}
+
+.hdr-cab {
+	display: none;
+}
+
+.hdr-bus {
+	display: none;
 }
