--- a/public/stylesheets/hidden.css
+++ b/public/stylesheets/hidden.css
@@ -1,58 +1,61 @@
-
 .wraphidden .hidden {
-	margin:10px;
-    
-	}
+    margin: 10px;
+
+}
 
 .pole {
-	position: fixed;
-	z-index: 10;
-    background: rgba(0,0,0,0.6);
+    position: fixed;
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 100%;
-}	
+}
+
 .wraphidden {
-	color: #020d70;
-	position: fixed;
-	margin-left: 30px;
-	border :2px solid #020d70; 
-	z-index: 20;
-	background: #fff;
-	border-radius: 6px;
+    color: #020d70;
+    position: fixed;
+    margin-left: 30px;
+    border: 2px solid #020d70;
+    z-index: 20;
+    background: #fff;
+    border-radius: 6px;
 }
 }
- .wraphidden form {
-	font-size: 20px;
-	margin-left: 60px;
+
+.wraphidden form {
+    font-size: 20px;
+    margin-left: 60px;
 }
+
 .wraphidden form div {
-	margin-top: 40px;
-	
+    margin-top: 40px;
+
 }
- .wraphidden form div p label:hover {
+
+/*.wraphidden form div p label:hover {
 	color: #69acdb;
 
-}
- .wraphidden form .button p label {
-	border :2px solid #020d70; 
-	color: #020d70;
-}
-.wraphidden form .button p {
-	margin-bottom: 10px;
+}*/
+.button p label {
+    border: 2px solid #020d70;
+    color: #020d70;
 }
 
-.hid{
-	display:none;
-	font-size: 20px;
+.button p {
+    margin-bottom: 10px;
+}
+
+.hid {
+    display: none;
+    font-size: 20px;
 }
 
 
 
- .hidauth .pole {
-	position: fixed;
-	z-index: 10;
-    background: rgba(0,0,0,0.6);
+.hidauth .pole {
+    position: fixed;
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 100%;
 }
-
