--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,267 +1,320 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-color: black;
+    margin: 0;
+    padding: 0;
+    font-color: black;
 }
 
 
 ul {
-	list-style: none;
+    list-style: none;
 }
 
 
 a {
-	text-decoration: none;
+    text-decoration: none;
 }
+
 body {
-	font-size: 30px;
+    font-size: 30px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .main:after {
-  visibility: hidden;
-  display: block;
-  font-size: 0;
-  content: " ";
-  clear: both;
-  height: 0;
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
 }
-.main { display: inline-block; }
+
+.main {
+    display: inline-block;
+}
+
 /* start commented backslash hack \*/
-* html .clearfix { height: 1%; }
-.main { display: block; }
+* html .clearfix {
+    height: 1%;
+}
+
+.main {
+    display: block;
+}
+
 /* close commented backslash hack */
- 
+
 body {
-	color: white;
-	font-size: 30px;
-	isplay:flex;
-	justify-content: center;
+    color: white;
+    font-size: 30px;
+    isplay: flex;
+    justify-content: center;
 }
+
 header {
-	background: #69acdb;
+    background: #69acdb;
 }
+
 aside {
-	width: 20%;
-	float: left;
-	color: #020d70;
-	
-	
+    width: 20%;
+    float: left;
+    color: #020d70;
+
+
 
 }
+
 aside form {
-	font-size: 20px;
-	margin-left: 60px;
+    font-size: 20px;
+    margin-left: 60px;
 }
+
 aside form div {
-	margin-top: 40px;
-	
-}
-aside form div p label:hover {
-	color: #69acdb;
+    margin-top: 40px;
 
 }
-aside form .button p label {
-	border :2px solid #020d70; 
-	color: #020d70;
+
+label:hover {
+    color: #69acdb;
+    cursor: pointer;
+
 }
-aside form .button p {
-	margin-bottom: 10px;
+
+.button p label {
+    border: 2px solid #020d70;
+    color: #020d70;
 }
+
+.button p {
+    margin-bottom: 10px;
+}
+
 section {
-	width: 80%;
-	float: left;
-	min-height: 300px;
-	
+    width: 80%;
+    float: left;
+    min-height: 300px;
+
 
 }
 
 
 footer {
-	background: #020d70 ;
-	height: 200px;
+    background: #020d70;
+    height: 200px;
 
 }
-header{
 
-}
-header .hdrlist {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+header {}
+
+.hdrlist {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-header .hdrlist li .hdr-cab{
+.hdr-cab {
     margin-top: 5px;
     margin-right: 10px;
 }
-header .hdrlist li .wrap {
-	margin-left: 400px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+
+.hdrlist li .wrap {
+    margin-left: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 
 }
-header .hdrlist li .hdr-bus{
-	margin-top: 0px;
-}
-header .hdrlist li .listmenu li {
-	font-size: 15px;
-	margin: 20px 20px 20px 20px;
+
+.hdrlist a:hover {
+    color: #fff;
 }
 
-header .hdrlist li .listmenu{
-	display: flex;
-	flex-wrap: nowrap;
+.hdr-bus {
+    margin-top: 0px;
 }
-header .hdrlist li p {
-	display: none;
+
+.listmenu li {
+    font-size: 15px;
+    margin: 20px 20px 20px 20px;
 }
-nav{
-  background-color: #020d70;
-  display:flex;
-  flex-wrap: nowrap;
+
+.listmenu {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.hdrlist li p {
+    display: none;
+}
+
+nav {
+    background-color: #020d70;
+    display: flex;
+    flex-wrap: nowrap;
 
 
 }
+
 nav .list-nav {
-	display:flex;
-	flex-wrap: wrap;
-	padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
 
-	border-radius: 10px;
-	justify-content: center;
-}
-
-nav .list-nav li{
-	display: block;
-	margin: 15px 50px 20px 50px;
-	padding: 5px;
-	border: 1px;
-	font-size: 20px;
-}
-nav .list-nav li ul{
-	position: absolute;
-	width: 230px;
-	background-color:#020d70 ;
-	display: none;
-}
-nav .list-nav li ul li {
-	position: relative;
-}
-nav .list-nav li:hover ul{
-	display: block;
-}
-nav .list-nav li .filter{
-	display: none;
-}
-nav .list-nav li a:hover{
-	color: white; 
-}
-nav .list-nav li a
-{
-	color: #69acdb;
-}
-nav .logo p {
-	margin:20px,5px,0px,5px;
-}
-nav .wrap-list {
-	
-}
-.main section .product-list {
-	display:flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	padding: 10px;
-	border-radius: 10px;
-	padding-top: 40px;
-}
-.main section .product-list li {
-	margin: 10px;
-	padding: 5px;
-	border: 5px solid #FFFFFF;
-	width: 250px;
-	height: 350px;
-}
-.main section .product-list li:hover {
-	border: 5px solid #020d70;
-
-}
-.main section .product-list li a {
-	color: #000033;
-	font-size: 15px;
-	height: 300px;
-}
-.main section .product-list li a:hover {
-	color: #69acdb;
-}
-.main section .product-list li .price-prod {
-	padding-top: 30px;
-	height: 50px;
-	float: left;
-	width: 60%;
-	color: #000033;
-	font-size: 15px;
-}
-.main section .product-list li .price-prod h5 {
-	color: #020d70;
-	font-size:20px;
-}
-.main section .product-list li p{
-	float: left;
-	width: 40%;
-	padding-top: 30px;
+    border-radius: 10px;
+    justify-content: center;
 }
 
-@media (max-width: 1450px){
-	aside {display: none;}
-	.main {
-		display:flex;
-	    flex-wrap: wrap;
-	    justify-content: center;
+.list-nav li {
+    display: block;
+    margin: 15px 50px 20px 50px;
+    padding: 5px;
+    border: 1px;
+    font-size: 20px;
+}
 
-	}
-	nav .list-nav li .filter{
-		display: contents;
+.list-nav li ul {
+    position: absolute;
+    width: 230px;
+    background-color: #020d70;
+    display: none;
+}
 
-	}
-	nav .logo {
-		display: none;
-	}
-	
-	header .hdrlist li p {
-		display: contents;
-	}
+.list-nav li ul li {
+    position: relative;
+}
+
+.list-nav li:hover ul {
+    display: block;
+}
+
+.filter {
+    display: none;
+}
+
+.list-nav li a:hover {
+    color: white;
+}
+
+.list-nav li a {
+    color: #69acdb;
+}
+
+.logo p {
+    margin: 20px, 5px, 0px, 5px;
+}
+
+.filter {
+    display: none;
+}
+
+.product-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 10px;
+    padding-top: 40px;
+}
+
+.product-list li {
+    margin: 10px;
+    padding: 5px;
+    border: 5px solid #FFFFFF;
+    width: 250px;
+    height: 350px;
+}
+
+.product-list li:hover {
+    border: 5px solid #020d70;
+
+}
+
+.product-list li a {
+    color: #000033;
+    font-size: 15px;
+    height: 300px;
+}
+
+.product-list li a:hover {
+    color: #69acdb;
+}
+
+.price-prod {
+    padding-top: 30px;
+    height: 50px;
+    float: left;
+    width: 60%;
+    color: #000033;
+    font-size: 15px;
+}
+
+.price-prod h5 {
+    color: #020d70;
+    font-size: 20px;
+}
+
+.product-list li p {
+    float: left;
+    width: 40%;
+    padding-top: 30px;
+}
+
+@media (max-width: 1450px) {
+    aside {
+        display: none;
+    }
+
+    .main {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
+    }
+
+    .filter {
+        display: block;
+
+    }
+
+    nav .logo {
+        display: none;
+    }
+
+    header .hdrlist li p {
+        display: contents;
+    }
 }
 
 @media (max-width: 1250px) {
-	header .hdrlist li .wrap{
-		margin-left: 30px;
-	}
+    header .hdrlist li .wrap {
+        margin-left: 30px;
+    }
 }
 
 @media (min-width: 1550px) {
-	body .wrap-main{
-		margin-left:100px;
-		margin-right: 100px;
+    body .wrap-main {
+        margin-left: 100px;
+        margin-right: 100px;
 
-	}
+    }
 }
+
 .hid-sub {
-	display: none;
-	position: fixed;
-	z-index: 10;
-    background: rgba(0,0,0,0.6);
+    display: none;
+    position: fixed;
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 100%;
     justify-content: center;
 }
+
 .sub {
     color: #020d70;
-	position: fixed;
-	margin-left: 30px;
-	border :2px solid #020d70; 
-	z-index: 20;
-	background: #fff;
-	margin-top: 40%;
-	border-radius: 6px;
+    position: fixed;
+    margin-left: 30px;
+    border: 2px solid #020d70;
+    z-index: 20;
+    background: #fff;
+    margin-top: 40%;
+    border-radius: 6px;
 }
